# LibrePCB

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  vcpkg.json
cmake/: FindDxflib.cmake  FindMuParser.cmake
libs/delaunay-triangulation/: delaunay.h  edge.h  triangle.h  vector2.h
libs/fontobene-qt5/tests/: CMakeLists.txt
libs/googletest/: CMakeLists.txt
libs/googletest/googlemock/: CMakeLists.txt
libs/googletest/googletest/: CMakeLists.txt
libs/hoedown/: CMakeLists.txt
libs/librepcb/core/: CMakeLists.txt  build_env.h.in
libs/librepcb/core/font/: strokefont.h
libs/librepcb/core/workspace/: workspacelibrarydb.cpp  workspacelibrarydb.h
libs/librepcb/editor/widgets/: attributelisteditorwidget.cpp
libs/muparser/: CMakeLists.txt
libs/optional/: CMakeLists.txt
libs/optional/tests/: extensions.cpp  issues.cpp
libs/optional/tl/: optional.hpp
libs/type_safe/: CMakeLists.txt
libs/type_safe/include/type_safe/: constrained_type.hpp
tests/cli/open_library/: test_strict.py
tests/unittests/core/geometry/: holetest.cpp
